--- a/Packet.vcxproj
+++ b/Packet.vcxproj
@@ -360,6 +360,8 @@
     <ClCompile Include="Packet\Module\Modules\XP.cpp" />
     <ClCompile Include="Packet\Module\Modules\Xray.cpp" />
     <ClCompile Include="Packet\Module\Modules\Zoom.cpp" />
+    <ClCompile Include="Packet\Module\Modules\Spider.cpp" />
+    <ClCompile Include="Packet\Module\Modules\Emote.cpp" />
     <ClCompile Include="Packet\Scripting\Functions\CommandManagerFunctions.cpp" />
     <ClCompile Include="Packet\Scripting\Functions\DrawFunctions.cpp" />
     <ClCompile Include="Packet\Scripting\Functions\EntityFunctions.cpp" />
@@ -528,6 +530,8 @@
     <ClInclude Include="Packet\Module\Modules\XP.h" />
     <ClInclude Include="Packet\Module\Modules\Xray.h" />
     <ClInclude Include="Packet\Module\Modules\Zoom.h" />
+    <ClInclude Include="Packet\Module\Modules\Spider.h" />
+    <ClInclude Include="Packet\Module\Modules\Emote.h" />
     <ClInclude Include="Packet\Scripting\Functions\CommandManagerFunctions.h" />
     <ClInclude Include="Packet\Scripting\Functions\DrawFunctions.h" />
     <ClInclude Include="Packet\Scripting\Functions\EntityFunctions.h" />
