--- a/Packet.vcxproj
+++ b/Packet.vcxproj
@@ -365,6 +365,7 @@
     <ClCompile Include="Packet\Module\Modules\Zoom.cpp" />
     <ClCompile Include="Packet\Module\Modules\Spider.cpp" />
     <ClCompile Include="Packet\Module\Modules\Packet.cpp" />
+    <ClCompile Include="Packet\Module\Modules\InfiniteReach.cpp" />
     <ClCompile Include="Packet\Scripting\Functions\CommandManagerFunctions.cpp" />
     <ClCompile Include="Packet\Scripting\Functions\DrawFunctions.cpp" />
     <ClCompile Include="Packet\Scripting\Functions\EntityFunctions.cpp" />
@@ -538,6 +539,7 @@
     <ClInclude Include="Packet\Module\Modules\Zoom.h" />
     <ClInclude Include="Packet\Module\Modules\Spider.h" />
     <ClInclude Include="Packet\Module\Modules\Packet.h" />
+    <ClInclude Include="Packet\Module\Modules\InfiniteReach.h" />
     <ClInclude Include="Packet\Scripting\Functions\CommandManagerFunctions.h" />
     <ClInclude Include="Packet\Scripting\Functions\DrawFunctions.h" />
     <ClInclude Include="Packet\Scripting\Functions\EntityFunctions.h" />
