--- a/Packet.vcxproj
+++ b/Packet.vcxproj
@@ -349,7 +349,7 @@
     <ClCompile Include="Packet\Module\Modules\StackableItem.cpp" />
     <ClCompile Include="Packet\Module\Modules\Step.cpp" />
     <ClCompile Include="Packet\Module\Modules\Survival.cpp" />
-    <ClCompile Include="Packet\Module\Modules\TargetStrafe.cpp" />
+    <ClCompile Include="Packet\Module\Modules\TargetStrafeOld.cpp" />
     <ClCompile Include="Packet\Module\Modules\Teams.cpp" />
     <ClCompile Include="Packet\Module\Modules\BlockReach.cpp" />
     <ClCompile Include="Packet\Module\Modules\TestModule.cpp" />
@@ -367,7 +367,7 @@
     <ClCompile Include="Packet\Module\Modules\Spider.cpp" />
     <ClCompile Include="Packet\Module\Modules\Packet.cpp" />
     <ClCompile Include="Packet\Module\Modules\InfiniteReach.cpp" />
-    <ClCompile Include="Packet\Module\Modules\TSNew.cpp" />
+    <ClCompile Include="Packet\Module\Modules\TargetStrafe.cpp" />
     <ClCompile Include="Packet\Scripting\Functions\CommandManagerFunctions.cpp" />
     <ClCompile Include="Packet\Scripting\Functions\DrawFunctions.cpp" />
     <ClCompile Include="Packet\Scripting\Functions\EntityFunctions.cpp" />
@@ -525,7 +525,7 @@
     <ClInclude Include="Packet\Module\Modules\StackableItem.h" />
     <ClInclude Include="Packet\Module\Modules\Step.h" />
     <ClInclude Include="Packet\Module\Modules\Survival.h" />
-    <ClInclude Include="Packet\Module\Modules\TargetStrafe.h" />
+    <ClInclude Include="Packet\Module\Modules\TargetStrafeOld.h" />
     <ClInclude Include="Packet\Module\Modules\Teams.h" />
     <ClInclude Include="Packet\Module\Modules\BlockReach.h" />
     <ClInclude Include="Packet\Module\Modules\TestModule.h" />
@@ -543,7 +543,7 @@
     <ClInclude Include="Packet\Module\Modules\Spider.h" />
     <ClInclude Include="Packet\Module\Modules\Packet.h" />
     <ClInclude Include="Packet\Module\Modules\InfiniteReach.h" />
-    <ClInclude Include="Packet\Module\Modules\TSNew.h" />
+    <ClInclude Include="Packet\Module\Modules\TargetStrafe.h" />
     <ClInclude Include="Packet\Scripting\Functions\CommandManagerFunctions.h" />
     <ClInclude Include="Packet\Scripting\Functions\DrawFunctions.h" />
     <ClInclude Include="Packet\Scripting\Functions\EntityFunctions.h" />
