lots of stuff idk
maybe make a hivefly idk

--- a/Packet.vcxproj
+++ b/Packet.vcxproj
@@ -295,6 +295,7 @@
     <ClCompile Include="Packet\Module\Modules\BlockESP.cpp" />
     <ClCompile Include="Packet\Module\Modules\BlockOutline.cpp" />
     <ClCompile Include="Packet\Module\Modules\BreadCrumbs.cpp" />
+    <ClCompile Include="Packet\Module\Modules\ClickTP.cpp" />
     <ClCompile Include="Packet\Module\Modules\CustomSky.cpp" />
     <ClCompile Include="Packet\Module\Modules\EntityControl.cpp" />
     <ClCompile Include="Packet\Module\Modules\FastStop.cpp" />
@@ -477,6 +478,7 @@
     <ClInclude Include="Packet\Module\Modules\BlockESP.h" />
     <ClInclude Include="Packet\Module\Modules\BlockOutline.h" />
     <ClInclude Include="Packet\Module\Modules\BreadCrumbs.h" />
+    <ClInclude Include="Packet\Module\Modules\ClickTP.h" />
     <ClInclude Include="Packet\Module\Modules\CustomSky.h" />
     <ClInclude Include="Packet\Module\Modules\EntityControl.h" />
     <ClInclude Include="Packet\Module\Modules\FastStop.h" />
