--- a/Packet.vcxproj
+++ b/Packet.vcxproj
@@ -216,8 +216,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <None Include=".clang-format" />
-    <None Include="Packet\Module\NewFolder" />
     <None Include="packages.config" />
+    <None Include="Packet\Module\NewFolder" />
     <None Include="resources\coolroblox.json" />
     <None Include="resources\Steve.dat" />
   </ItemGroup>
@@ -360,6 +360,7 @@
     <ClCompile Include="Packet\Module\Modules\StackableItem.cpp" />
     <ClCompile Include="Packet\Module\Modules\Step.cpp" />
     <ClCompile Include="Packet\Module\Modules\Survival.cpp" />
+    <ClCompile Include="Packet\Module\Modules\TargetHUD.cpp" />
     <ClCompile Include="Packet\Module\Modules\TargetStrafeOld.cpp" />
     <ClCompile Include="Packet\Module\Modules\Teams.cpp" />
     <ClCompile Include="Packet\Module\Modules\BlockReach.cpp" />
@@ -547,6 +548,7 @@
     <ClInclude Include="Packet\Module\Modules\StackableItem.h" />
     <ClInclude Include="Packet\Module\Modules\Step.h" />
     <ClInclude Include="Packet\Module\Modules\Survival.h" />
+    <ClInclude Include="Packet\Module\Modules\TargetHUD.h" />
     <ClInclude Include="Packet\Module\Modules\TargetStrafeOld.h" />
     <ClInclude Include="Packet\Module\Modules\Teams.h" />
     <ClInclude Include="Packet\Module\Modules\BlockReach.h" />
@@ -649,14 +651,14 @@
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
-    <Import Project="packages\Microsoft.XAudio2.Redist.1.2.0\build\native\Microsoft.XAudio2.Redist.targets" Condition="Exists('packages\Microsoft.XAudio2.Redist.1.2.0\build\native\Microsoft.XAudio2.Redist.targets')" />
-    <Import Project="packages\directxtk_desktop_2017.2020.2.24.4\build\native\directxtk_desktop_2017.targets" Condition="Exists('packages\directxtk_desktop_2017.2020.2.24.4\build\native\directxtk_desktop_2017.targets')" />
+    <Import Project="packages\Microsoft.XAudio2.Redist.1.2.8\build\native\Microsoft.XAudio2.Redist.targets" Condition="Exists('packages\Microsoft.XAudio2.Redist.1.2.8\build\native\Microsoft.XAudio2.Redist.targets')" />
+    <Import Project="packages\directxtk_desktop_2017.2021.11.8.1\build\native\directxtk_desktop_2017.targets" Condition="Exists('packages\directxtk_desktop_2017.2021.11.8.1\build\native\directxtk_desktop_2017.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
-      <ErrorText>Ce projet fait référence à des packages NuGet qui sont manquants sur cet ordinateur. Utilisez l'option de restauration des packages NuGet pour les télécharger. Pour plus d'informations, consultez http://go.microsoft.com/fwlink/?LinkID=322105. Le fichier manquant est : {0}.</ErrorText>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('packages\Microsoft.XAudio2.Redist.1.2.0\build\native\Microsoft.XAudio2.Redist.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Microsoft.XAudio2.Redist.1.2.0\build\native\Microsoft.XAudio2.Redist.targets'))" />
-    <Error Condition="!Exists('packages\directxtk_desktop_2017.2020.2.24.4\build\native\directxtk_desktop_2017.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\directxtk_desktop_2017.2020.2.24.4\build\native\directxtk_desktop_2017.targets'))" />
+    <Error Condition="!Exists('packages\Microsoft.XAudio2.Redist.1.2.8\build\native\Microsoft.XAudio2.Redist.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Microsoft.XAudio2.Redist.1.2.8\build\native\Microsoft.XAudio2.Redist.targets'))" />
+    <Error Condition="!Exists('packages\directxtk_desktop_2017.2021.11.8.1\build\native\directxtk_desktop_2017.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\directxtk_desktop_2017.2021.11.8.1\build\native\directxtk_desktop_2017.targets'))" />
   </Target>
 </Project>
